<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Luftkraftsport</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_open_ad_page">Details</string>
    <string name="title_search_page">Suche</string>
    <string name="title_login_page">Anmelden</string>
    <string name="title_message_page">Nachrichten</string>
    <string name="title_msg_overview_page">Postbox</string>
    <string name="title_settings_page">Einstellungen</string>
    <string name="title_searches_page">Meine Suchens</string>
    <string name="title_locations_page">Meine Position</string>
    <string name="title_set_price_page">Preis</string>
    <string name="title_register_user">Register</string>
    <string name="title_activate_user">Aktiviere Benutzer</string>

    <string name="title_open_my_ads_page">Meine Anzeigen</string>

    <string name="enter_title_string">Titel</string>

    <string name="submit_string">Submit</string>

    <string name="facebook_app_id">535532649933816</string>
    <string name="facebook_client_token">0a260a5cbd103594468ff32e929fb5db</string>

    <string name="google_maps_key">AIzaSyA8x3Il4-xgNij1FSOxQkMYX4_1bzVo12k</string>

    <string name="server_client_id">485775614575-bgge92h3jhg7hm24qlmrl7bekcd64mbp.apps.googleusercontent.com</string>

    <string name="title_new_add_page" tools:ignore="MissingTranslation">Anlegen</string>
    <string name="uploadAd">Erstelle Anzeige</string>
    <string name="preis">Preis...</string>
    <string name="description">Beschreibe es...</string>
    <string name="keywords">Was verkaufst Du...</string>
    <string name="price_does_not_matter">Beliebig</string>
    <string name="exit_question">Wirklich beenden?</string>
    <string name="zip_request">Postleitzahl oder Ort angeben!</string>
    <string name="distence_request">In welcher Entfernung soll gesucht werden?</string>
    <string name="price_range">Gib deine Preisspanne an!</string>
    <string name="empty_result">Keine Ergebnisse gefunden!</string>
    <string name="confirm_save_search">Suche abgespeichert!</string>
    <string name="save_search_info_text">Du bekommst eine Benachrichtigung, sobald es neue Artikel gibt, die deiner Suche entsprechen.</string>
    <string name="confirm_network_error">Problem!</string>
    <string name="confirm_network_error_text">Es gab ein Problem mit der Netzwerkverbindung! Versuche es bitte nochmal.</string>
    <string name="confirm_wrong_login">Login fehlgeschlagen</string>
    <string name="confirm_wrong_login_text">Der Benutzername oder das Passwort war falsch! Versuche es bitte nochmal.</string>
    <string name="confirm_read_write_permission">Lese-/Schreibberechtigung abgelehnt </string>
    <string name="confirm_read_write_permission_text">Ohne Lese- und Schreiberechtigung kannst Du keine Anzeige erstellen. Willst Du dir es nochmal überlegen?</string>
    <string name="confirm_user_not_activated_error">Problem!</string>
    <string name="confirm_user_not_activated_error_text">Dieser Benutzer ist noch nicht aktiviert! Benutze den Aktivierungslink in Deiner Email oder den Aktivierungscode.</string>
    <string name="welcome_title">Willkommen bei Luftkraftsport</string>
    <string name="welcome_text">Wir als Entwickler dieser App versuchen Dir beim Verkauf/Kauf deines Materials so gut wie möglich zu helfen!
        Dabei gibt es noch eine Reihe von Dingen, die gerade am Anfang passieren können. Wenn es einen crash geben sollte, sei uns bitte behilflich und sende den Bericht,
    dann können wir das Problem so schnell wie möglich beheben. Wenn es Deiner Meinung nach Verbesserungsvorschläge gibt, teile sie uns mit! Nutze die Feedback email Adresse. Viel Spass und Erfolg beim Handeln!</string>


    <!-- Empty Ads Database -->
    <string name="empty_Ads_list_no_network">No Ads information available. The network is not available to fetch data.</string>
    <string name="search_for_keyword">Suche:</string>
    <string name="search_price">Preis:</string>
    <string name="search_location">Ort:</string>

    <string name="crash_dialog_text">Senden der crashinformationen. ok!!</string>
    <string name="crash_notification_text">öffne mich!!!</string>
    <string name="crash_titel">Bernds app aua</string>
    <string name="crash_text">crash passiert, wie weiter?</string>

    <string name="user_is_registered">"Neues Konto wurde angelegt!" Ein Aktivierungscode wurde dir an deine Email gesendet. Bitte gib diesen ein, um deine Kontoaktivierung abzuschliessen!"</string>

    <string name="user_is_registered_problem">"Es gab ein Problem das Konto anzulegen. Versuche es nochmal. "</string>
    <string name="hint_for_price">Preis: Beliebig</string>
    <string name="delete">löschen!</string>
    <string name="confirm_delete">Möchtest Du wirklich löschen?</string>
    <string name="search_in_drawer">Suchen</string>
    <string name="messages">Nachrichten</string>
    <string name="settings">Einstellungen</string>
    <string name="check_on_ebay">Check auf ebay</string>

</resources>
