<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/empty_photo"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageButton2" />

    <ImageView
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1sp"
        app:srcCompat="@drawable/empty_photo"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/keywords"
        android:layout_width="0dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/keywords"
        android:inputType="textPersonName"
        android:layout_height="89dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="127dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/keywords"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/preis"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/preis"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/preis"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/uploadAd"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />



</android.support.constraint.ConstraintLayout>
