<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_creata_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--View
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/side_nav_bar"
        app:srcCompat="@drawable/empty_photo" /-->


    <HorizontalScrollView
        android:id="@+id/picture_ll"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_gravity="start"
        android:adjustViewBounds="true"
        android:animateLayoutChanges="true"
        android:scrollbars="none">

        <LinearLayout


            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/empty_photo" />

            <ImageView
                android:id="@+id/imageButton2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:srcCompat="@drawable/empty_photo" />

            <ImageView
                android:id="@+id/imageButton3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:srcCompat="@drawable/empty_photo" />

            <ImageView
                android:id="@+id/imageButton4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:srcCompat="@drawable/empty_photo" />

            <ImageView
                android:id="@+id/imageButton5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:srcCompat="@drawable/empty_photo" />

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/picture_ll"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            android:id="@+id/divider0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/new_ad_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="0.1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/keywords"
            android:inputType="textPersonName|textMultiLine" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/new_ad_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0.4"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textPersonName|textMultiLine" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/new_ad_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="0.2"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/preis"
            android:inputType="number" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/create_standort_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Standort: "
                android:textSize="18sp" />

            <TextView
                android:id="@+id/create_location_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/create_change_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

        </LinearLayout>


        <Button
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/uploadAd"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>
